--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,9 +32,10 @@ button,
 label,
 input[type="checkbox"] {
     cursor: pointer;
+    outline: none;
 }
 
-input:not([type="checkbox"]) {
+input:not([type="checkbox"]):not([type="range"]) {
     box-sizing: border-box;
     margin: 0;
     padding: .5em 5px;
@@ -56,11 +57,11 @@ input:focus::placeholder {
     color: #5f5f5f;
 }
 
-input:not([type="checkbox"]):hover {
+input:not([type="checkbox"]):not([type="range"]):hover {
     box-shadow: 0 2px #00BCD4;
 }
 
-input:not([type="checkbox"]):focus {
+input:not([type="checkbox"]):not([type="range"]):focus {
     background-color: #444;
     border-radius: 2px;
     box-shadow:
@@ -68,7 +69,7 @@ input:not([type="checkbox"]):focus {
         0 0 0 3px #00BCD4;
 }
 
-input:not([type="checkbox"]).invalid {
+input:not([type="checkbox"]):not([type="range"]).invalid {
     background-color: #D84315;
     color: #FBE9E7;
     box-shadow: 0 0 0 1px;
